# theory-of-parallelism_

./: README.md
task_1/: main
task_1/with_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  task1
task_3/: Power.txt  Sinus.txt  Square.txt  makefile  task1.cpp  task2.cpp  task2_cheker.cpp
task_4/: task4.py
task_5/: task_5.1.py  task_5.py
task_6/cpu/: cpu.cpp  makefile
task_6/gpu/: gpu.cpp  makefile
task_7/: makefile  task7.cpp  Очет_7.docx
task_8/task8/: CMakeLists.txt  main.cu  makefile  readme  test.cpp
